Updated xfce configs

--- a/etc/skel/.config/xfce4/panel/whiskermenu-8.rc
+++ b/etc/skel/.config/xfce4/panel/whiskermenu-8.rc
@@ -1,7 +1,6 @@
-favorites=firefox.desktop,exo-file-manager.desktop,exo-terminal-emulator.desktop,exo-preferred-applications.desktop,conkyzen.desktop
-recent=
-button-title=Applications
-button-icon=start-here-arch
+favorites=firefox.desktop,org.gnome.Evolution.desktop,exo-file-manager.desktop,exo-terminal-emulator.desktop,exo-preferred-applications.desktop
+recent=exo-file-manager.desktop,menulibre.desktop,exo-preferred-applications.desktop,exo-terminal-emulator.desktop,firefox.desktop
+button-icon=/usr/share/icons/white.svg
 button-single-row=false
 show-button-title=true
 show-button-icon=true
@@ -22,14 +21,14 @@ position-commands-alternate=true
 position-categories-alternate=true
 stay-on-focus-out=false
 confirm-session-command=true
-menu-width=410
-menu-height=583
-menu-opacity=80
+menu-width=400
+menu-height=519
+menu-opacity=100
 command-settings=xfce4-settings-manager
 show-command-settings=true
-command-lockscreen=slimlock
+command-lockscreen=xflock4
 show-command-lockscreen=true
-command-switchuser=xfce4-session-logout -u
+command-switchuser=dm-tool switch-to-greeter
 show-command-switchuser=true
 command-logoutuser=xfce4-session-logout --logout --fast
 show-command-logoutuser=false
@@ -58,7 +57,7 @@ regex=false
 [action1]
 name=Web Search
 pattern=?
-command=exo-open --launch WebBrowser https://google.com/?q=%u
+command=exo-open --launch WebBrowser https://duckduckgo.com/?q=%u
 regex=false
 
 [action2]
@@ -78,3 +77,4 @@ name=Open URI
 pattern=^(file|http|https):\\/\\/(.*)$
 command=exo-open \\0
 regex=true
+
